--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/WebGlFinalV1.loader.js";
       var config = {
-        dataUrl: buildUrl + "/WebGlFinalV1.data.gz",
-        frameworkUrl: buildUrl + "/WebGlFinalV1.framework.js.gz",
-        codeUrl: buildUrl + "/WebGlFinalV1.wasm.gz",
+        dataUrl: buildUrl + "/WebGlFinalV1.data.br",
+        frameworkUrl: buildUrl + "/WebGlFinalV1.framework.js.br",
+        codeUrl: buildUrl + "/WebGlFinalV1.wasm.br",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "Dojo Studios",
         productName: "GrandTheftDojoV1",
